# bfg-rs

./: .gitignore  Cargo.toml  OpeningRangDownload.ipynb  README.md  ResultsCalculations.ipynb  VisualizeOpeningRanges.ipynb  opening_ranges_2022_IX.D.CAC.IMF.IP.csv  opening_ranges_2022_IX.D.DAX.IFMM.IP.csv  opening_ranges_2022_IX.D.FTSE.IFE.IP.csv  opening_ranges_2022_IX.D.NASDAQ.IFE.IP.csv  opening_ranges_2022_IX.D.OMX.IFM.IP.csv  opening_ranges_2022_IX.D.SPTRD.IFE.IP.csv  porfolio_calculations.ods
bfg-actrix/: Cargo.toml
bfg-actrix/src/: main.rs
bfg-app/: Cargo.toml
bfg-app/src/: app.rs  event.rs  main.rs  ui.rs
bfg-betfair/: Cargo.toml
bfg-betfair/src/: env.rs  lib.rs  rest.rs
bfg-cli/: Cargo.toml
bfg-cli/src/: config.rs  main.rs
bfg-cli/tests/: cli.rs
bfg-core/: Cargo.toml
bfg-core/src/: bfg.rs  bfg_service_impl.rs  broker.rs  config.rs  domain.rs  errors.rs  ladder.rs  lib.rs  market.rs  models.rs  ports.rs
bfg-core/src/account/: account_provider.rs  account_service.rs  mod.rs
bfg-core/src/decider/: mod.rs  order.rs  order_manager.rs  system.rs
bfg-ig/: Cargo.toml
bfg-ig/src/: account.rs  api.rs  config.rs  file_writer.rs  lib.rs  models.rs  systems_manager.rs
bfg-tui/: Cargo.toml
bfg-tui-base/: Cargo.toml
bfg-tui-base/src/: brokerage_dummy.rs  lib.rs  main.rs
bfg-tui-base/src/app/: actions.rs  mod.rs  state.rs  ui.rs
bfg-tui-base/src/app/ui/: menu.rs  mod.rs  status_bar.rs
bfg-tui-base/src/app/ui/body/: bfg_status.rs  help.rs  logs.rs  mod.rs
bfg-tui-base/src/inputs/: events.rs  mod.rs
bfg-tui-base/src/io/: handler.rs
bfg-tui/data/: db.json
bfg-tui/src/: config.rs  main.rs
bfg-tui/src/app/: actions.rs  mod.rs
bfg-tui/src/app/ui/: menu.rs  status_bar.rs
bfg-tui/src/app/ui/body/: bfg_status.rs
bfg-tui/src/inputs/: events.rs
bfg-tui/src/io/: handler.rs
bfg-web/: Cargo.toml
bfg-web/src/: errors.rs  main.rs  routes.rs
bfg-web/src/handlers/: market.rs  mod.rs  session.rs
bfg-web/src/models/: market.rs
ig-brokerage-adapter/: Cargo.toml
ig-brokerage-adapter/src/: errors.rs  ig_brokerage_impl.rs  lib.rs  models.rs
ig-brokerage-adapter/src/realtime/: mod.rs  models.rs  notifications.rs  subscription_manager.rs
ig-brokerage-adapter/src/rest/: mod.rs  models.rs
ig-rs/: Cargo.toml
ig-rs/src/: client.rs  lib.rs  macros.rs
ig-rs/src/login/: get.rs  post.rs
src/: bfg_service_impl.rs  domain.rs  ig_brokerage_api.rs  ig_brokerage_impl.rs  main.rs  warp_bfg_controller.rs
src/app/: model.rs
src/components/: ladder.rs  markets.rs  mod.rs  phantom.rs  status.rs
src/rest/: identity.rs  login.rs  mod.rs
src/stream/: mod.rs
src/stream/model/: response.rs
