[package]
name = "bfg-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
mockall = "0.11.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
warp = "0.3"
tokio = { version = "1.1.1", features = ["full"] }
reqwest = "0.11.10"
parking_lot = "0.10.0"

[workspace]
members = [
    "bfg-core",
]