[package]
name = "bfg-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]

[dependencies]

[workspace]
members = [
    "bfg-core",
    "ig-brokerage-adapter",
    "bfg-web",
    "bfg-actrix",
    "bfg-tui",
    "bfg-tui-base"
]