[package]
name = "bfg-betfair"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bfg-core = { path = "../bfg-core"}
anyhow.workspace = true
reqwest = {version = "0.12.5", features = ["blocking", "json", "native-tls"]}
serde = {version = "1.0.203", features = ["derive"]}


[dev-dependencies]
mockito = "1.4.0"
