[package]
name = "bfg-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bfg-betfair = { path = "../bfg-betfair" }
anyhow.workspace = true
log.workspace = true

clap = { version = "4.5.8", features = ["derive"] }
env_logger = "0.11.3"
ctrlc = "3.4.4"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
assert_fs = "1.1.1"
