[package]
name = "bfg-ig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bfg-core = { path = "../bfg-core"}
ig-brokerage-adapter = { path = "../ig-brokerage-adapter"}
tokio = { version = "1", features = ["full"] }
