[package]
name = "bfg-tui-base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.15", features = ["crossterm"], default-features = false }
crossterm = "0.19"

eyre = "0.6"
rand = { version = "0.7.3", default-features = false, features = ["std"] }

log = "0.4"
tui-logger = { git = "https://github.com/gin66/tui-logger", rev = "3a3568e2464dddc2205e071234135998342d7f1d" }
#tui-logger = "0.7.1"

bfg-core = { path = "../bfg-core"}
