[package]
name = "bfg-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bfg-core = { path = "../bfg-core"}
ig-brokerage-adapter = { path = "../ig-brokerage-adapter"}
actix-web = "3.1.0"
actix-rt = "1.1.1"
serde = { version = "1.0.110", features = ["derive"] }
chrono = {version = "0.4.11", features = ["serde"]}
dotenvy = "0.15.1"
