[package]
name = "ig-brokerage-adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
mockall = "0.11.0"

[dependencies]
bfg-core = { path = "../bfg-core"}
reqwest = {version="0.11.10", features=["json", "blocking"]}
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
dotenvy = "0.15.1"
